import { snapshotTest as cliffySnapshotTest } from "@cliffy/testing"
import { deleteCommand } from "../../../src/commands/project/project-delete.ts"
import { commonDenoArgs } from "../../utils/test-helpers.ts"
import { MockLinearServer } from "../../utils/mock_linear_server.ts"

// Test help output
await cliffySnapshotTest({
  name: "Project Delete Command - Help Text",
  meta: import.meta,
  colors: false,
  args: ["--help"],
  denoArgs: commonDenoArgs,
  async fn() {
    await deleteCommand.parse()
  },
})

// Test successful project deletion with --yes flag
await cliffySnapshotTest({
  name: "Project Delete Command - With Yes Flag",
  meta: import.meta,
  colors: false,
  args: [
    "550e8400-e29b-41d4-a716-446655440000",
    "--yes",
  ],
  denoArgs: commonDenoArgs,
  async fn() {
    const server = new MockLinearServer([
      {
        queryName: "DeleteProject",
        response: {
          data: {
            projectDelete: {
              success: true,
              entity: {
                id: "550e8400-e29b-41d4-a716-446655440000",
                name: "Deleted Project",
              },
            },
          },
        },
      },
    ])

    try {
      await server.start()
      Deno.env.set("LINEAR_GRAPHQL_ENDPOINT", server.getEndpoint())
      Deno.env.set("LINEAR_API_KEY", "Bearer test-token")

      await deleteCommand.parse()
    } finally {
      await server.stop()
      Deno.env.delete("LINEAR_GRAPHQL_ENDPOINT")
      Deno.env.delete("LINEAR_API_KEY")
    }
  },
})

await cliffySnapshotTest({
  name: "Project Delete Command - Legacy Force Alias",
  meta: import.meta,
  colors: false,
  args: [
    "550e8400-e29b-41d4-a716-446655440000",
    "--force",
  ],
  denoArgs: commonDenoArgs,
  async fn() {
    const server = new MockLinearServer([
      {
        queryName: "DeleteProject",
        response: {
          data: {
            projectDelete: {
              success: true,
              entity: {
                id: "550e8400-e29b-41d4-a716-446655440000",
                name: "Deleted Project",
              },
            },
          },
        },
      },
    ])

    try {
      await server.start()
      Deno.env.set("LINEAR_GRAPHQL_ENDPOINT", server.getEndpoint())
      Deno.env.set("LINEAR_API_KEY", "Bearer test-token")

      await deleteCommand.parse()
    } finally {
      await server.stop()
      Deno.env.delete("LINEAR_GRAPHQL_ENDPOINT")
      Deno.env.delete("LINEAR_API_KEY")
    }
  },
})

await cliffySnapshotTest({
  name: "Project Delete Command - Dry Run",
  meta: import.meta,
  colors: false,
  args: [
    "550e8400-e29b-41d4-a716-446655440099",
    "--dry-run",
  ],
  denoArgs: commonDenoArgs,
  async fn() {
    await deleteCommand.parse()
  },
})

await cliffySnapshotTest({
  name: "Project Delete Command - Requires Explicit Confirmation Mode",
  meta: import.meta,
  colors: false,
  canFail: true,
  args: ["550e8400-e29b-41d4-a716-446655440099"],
  denoArgs: commonDenoArgs,
  async fn() {
    await deleteCommand.parse()
  },
})
